--- a/commander/commander.csproj
+++ b/commander/commander.csproj
@@ -43,6 +43,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Net.Http, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
@@ -155,6 +156,7 @@
     <Compile Include="IsoProgressDialog.Designer.cs">
       <DependentUpon>IsoProgressDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="NativeMethods.cs" />
     <Compile Include="PdfPreviewer.cs">
       <SubType>UserControl</SubType>
     </Compile>
