--- a/PluginLib/PluginLib.csproj
+++ b/PluginLib/PluginLib.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -43,9 +44,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ComboBoxItem.cs" />
     <Compile Include="IAppContainer.cs" />
+    <Compile Include="IDirectoryInfo.cs" />
+    <Compile Include="IFileInfo.cs" />
+    <Compile Include="IFilesystem.cs" />
     <Compile Include="ILibrary.cs" />
     <Compile Include="IPlugin.cs" />
+    <Compile Include="ITagInfo.cs" />
     <Compile Include="PluginContext.cs" />
     <Compile Include="PluginInfoAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
