--- a/commander/commander.csproj
+++ b/commander/commander.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>commander</RootNamespace>
     <AssemblyName>commander</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -40,6 +40,9 @@
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.6.0.6\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="ObjectListView, Version=2.9.1.1072, Culture=neutral, PublicKeyToken=b1c5bf581481bcd4, processorArchitecture=MSIL">
+      <HintPath>..\packages\ObjectListView.Official.2.9.1\lib\net20\ObjectListView.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -178,6 +181,12 @@
     <Compile Include="LibraryPropertiesDialog.Designer.cs">
       <DependentUpon>LibraryPropertiesDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="MetaInfoManager.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MetaInfoManager.Designer.cs">
+      <DependentUpon>MetaInfoManager.cs</DependentUpon>
+    </Compile>
     <Compile Include="NativeMethods.cs" />
     <Compile Include="PdfPreviewer.cs">
       <SubType>UserControl</SubType>
@@ -193,6 +202,7 @@
       <DependentUpon>ProgressBarOperationDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="ProxyHelper.cs" />
+    <Compile Include="ProxyTestController.cs" />
     <Compile Include="QuickTagsUserControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -233,6 +243,12 @@
     </Compile>
     <Compile Include="TagPropertyDialog.Designer.cs">
       <DependentUpon>TagPropertyDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TitaniumProxyManager.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TitaniumProxyManager.Designer.cs">
+      <DependentUpon>TitaniumProxyManager.cs</DependentUpon>
     </Compile>
     <Compile Include="UrlBookmark.cs" />
     <Compile Include="UrlBookmarksWindow.cs">
@@ -438,6 +454,9 @@
     <EmbeddedResource Include="LibraryPropertiesDialog.resx">
       <DependentUpon>LibraryPropertiesDialog.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="MetaInfoManager.resx">
+      <DependentUpon>MetaInfoManager.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="PdfPreviewer.resx">
       <DependentUpon>PdfPreviewer.cs</DependentUpon>
     </EmbeddedResource>
@@ -461,6 +480,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="TagPropertyDialog.resx">
       <DependentUpon>TagPropertyDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TitaniumProxyManager.resx">
+      <DependentUpon>TitaniumProxyManager.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UrlBookmarksWindow.resx">
       <DependentUpon>UrlBookmarksWindow.cs</DependentUpon>
@@ -571,6 +593,10 @@
       <Project>{ecdc127f-8def-4f99-8300-72c13597339d}</Project>
       <Name>YoutubeExtractor</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\TitaniumLib\TitaniumLib\TitaniumLib.csproj">
+      <Project>{faa46a7c-aa4d-4818-93c8-5cbb3c5b9fef}</Project>
+      <Name>TitaniumLib</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Libs\IsoLib\IsoLib.csproj">
       <Project>{A97FDEF8-C93B-46DF-BBED-8EE4BB6C9323}</Project>
       <Name>IsoLib</Name>
@@ -578,10 +604,6 @@
     <ProjectReference Include="..\PluginLib\PluginLib.csproj">
       <Project>{90e6e142-c201-4918-9d48-6e0e041ea40d}</Project>
       <Name>PluginLib</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ProxyLib\ProxyLib.csproj">
-      <Project>{737631E0-772B-40C9-9BA0-D7A78D5B2796}</Project>
-      <Name>ProxyLib</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
