--- a/commander/packages.config
+++ b/commander/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ObjectListView.Official" version="2.9.1" targetFramework="net461" />
+  <package id="Trinet.Core.IO.Ntfs" version="4.1.1" targetFramework="net461" />
 </packages>
